added colours and fonts

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,13 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
-$blue: #0D6EFD;
+$red: #F16567;
 $yellow: #FFC65A;
 $orange: #E67E22;
-$green: #1EDD88;
+$green: #75dbadb9;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+$pink: #F3BAE5;
+$blue: #2F8CD7;
+$dark-grey: rgb(20, 20, 20);
+$off-white: rgb(252, 252, 252);
