--- a/app/views/shared/_resource_title.html.erb
+++ b/app/views/shared/_resource_title.html.erb
@@ -1,4 +1,2 @@
-<h1><%= @resource.title</%></h1>
-<h3>by <%= @resource.author </%></h3>
-
-<%# <%= render partial: "resource_title" %>
+<h1><%= @resource.title.upcase %></h1>
+<h3>by <%= @resource.author %></h3>
