created song controller, implemented basic logic for song show

--- a/app/views/shared/_resource_title.html.erb
+++ b/app/views/shared/_resource_title.html.erb
@@ -1,2 +1,2 @@
-<h1><%= @resource.title.upcase %></h1>
-<h3>by <%= @resource.author %></h3>
+<h1><%= resource.title.upcase %></h1>
+<h3>by <%= resource.author %></h3>
