--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -5,7 +5,7 @@ $red: #F16567;
 $yellow: #FFC65A;
 $orange: #E67E22;
 $green: #75dbadb9;
-$gray: #0E0000;
+$gray: #0e00009d;
 $light-gray: #F4F4F4;
 $pink: #F3BAE5;
 $blue: #2F8CD7;
