--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,7 +1,10 @@
 .avatar {
-  width: 40px;
+  width: 50px;
+  border: 2px solid $pink;
   border-radius: 50%;
 }
+
+
 .avatar-large {
   width: 56px;
   border-radius: 50%;
