--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,14 @@
-.navbar-lewagon {
+.navbar-lenguaviva {
   justify-content: space-between;
-  background: white;
+  background: $blue;
+  height: 60px;
+
+  .navbar-logo {
+    height: 45px;
+    object-fit: cover;
+  }
 }
 
-.navbar-lewagon .navbar-collapse {
+.navbar-lenguaviva .navbar-collapse {
   flex-grow: 0;
-}
-
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
 }
