--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,3 +1,7 @@
-<iframe src="<%=@song.url%>" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-<p>Note: You have to be logged into your Spotify account to listen to the full song.</p>
-<%= render "shared/resource_title", resource: @song %>
+<div class="container">
+  <%= render "shared/resource_title", resource: @song %>
+  <iframe src="<%=@song.url%>" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+  <p>Note: You have to be logged into your Spotify account to listen to the full song.</p>
+
+  <%= render "shared/new_comment_form", resource: @song %>
+</div>
