working on cards

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,4 +11,5 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
-@import "components/resource_title"
+@import "components/resource_title";
+@import "components/card"
