--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -5,7 +5,7 @@
 @import "colors";
 
 // Define fonts for body and headers
-$body-font: "Merriweather", "Open Sans";
+$body-font: "Open Sans", "Open Sans";
 $headers-font: "Raleway", "Open Sans";
 
 
