--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -2,35 +2,32 @@
   display: grid;
   grid-column-gap: 32px;
   row-gap: 48px;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   justify-items: center;
 }
 
 .resource-card {
-  width: 360px;
-  height: 420px;
+  display: flex;
+  width: 450px;
+  height: 250px;
   background-color: white;
-  // display: flex;
   border-radius: 3px;
-  box-shadow: 2px 2px 5px rgba(20, 20, 20, 0.2);
+  box-shadow: 2px 2px 5px $pink;
   transition: 0.2s;
   // overflow: auto;
 }
 
 .card-image {
-  background-color: black;
-  height: 300px;
-  width: 100%;
+  background-color: $off-white;
+  height: 250px;
+  width: 150px;
   object-fit: cover;
-  margin-bottom: 10px;
 }
 
 .card-info {
+  width: 300px;
   padding: 0px 16px;
-  display: flex;
-  justify-content: space-between;
-  // align-items: flex-end;
-  position: relative;
+  text-align: right;
 }
 
 .resource-details p {
