--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -1,4 +1,3 @@
-<h1>Hello world</h1>
 <div class="container">
   <div class="card-container">
     <% @resources.each do |resource| %>
@@ -10,15 +9,13 @@
 
         <div class="card-info">
           <div class="resource-details">
-          <h5><%= resource.title %></h5>
+          <h5><%= resource.title.upcase %></h5>
           <p><%= resource.author %></p>
           </div>
           <div class="resource-format">
           <p> <%= resource.type %></p>
           </div>
-        </div>
 
-        <div class="card-info">
           <div class="resource-tags">
             <p>Cooking</p>
           </div>
