--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -1,3 +1,3 @@
 <%= render 'shared/resource_title', resource: @video %>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/<%= @url_id %>"  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/<%= @video.url_id %>"  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
