container div added

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,8 @@
-<%= render "shared/resource_title", resource: @article %>
+<div class="container">
+
+  <%= render "shared/resource_title", resource: @article %>
 
 
-<%=@article.url%>
+  <%=@article.url%>
+
+</div>
