--- a/app/views/shared/_comments.html.erb
+++ b/app/views/shared/_comments.html.erb
@@ -1,9 +1,23 @@
 <h2>Comments</h2>
 <% if resource.comments.count > 0 %>
   <% resource.comments.each do |comment| %>
-    <p><%= comment.content %></p>
-    <p>Author: <%= comment.user.first_name %></p>
-    <p><%= comment.created_at %></p>
+
+    <div class="d-flex flex-column w-50">
+
+      <div class= "d-flex justify-content-between">
+
+        <div class="d-flex">
+          <%= image_tag "default_avatar", class: "avatar-small" %>
+          <p><%= comment.user.first_name %> <%= comment.user.last_name %></p>
+        </div>
+
+        <p><%= time_ago_in_words(comment.created_at) %> ago</p>
+
+      </div>
+
+      <p><%= comment.content %></p>
+
+    </div>
   <% end %>
 <% else %>
   <p>No comments yet.</p>
