--- a/app/views/shared/_new_comment_form.html.erb
+++ b/app/views/shared/_new_comment_form.html.erb
@@ -1,4 +1,4 @@
-  <%= simple_form_for [resource, @comment], class: "inline" do |f| %>
+  <%= simple_form_for @comment, url: resource_comments_path(resource), class: "inline" do |f| %>
     <div class="d-flex justify-content-start">
       <%= f.input :content, label: false, required: false, class: "comment-text-input", placeholder: "Leave a comment..." %>
       <%= button_tag :submit, class: "btn btn-primary comment-button" do %>
