--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
-  <%= render 'shared/resource_title', resource: @video %>
+  <%= render 'shared/resource_title', resource: @resource %>
 
   <iframe width="560" height="315" src="https://www.youtube.com/embed/<%= @url_id %>"  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-  <%= render "shared/comments", resource: @video %>
-  <%= render "shared/new_comment_form", resource: @video %>
+  <%= render "shared/comments", resource: @resource %>
+  <%= render "shared/new_comment_form", resource: @resource %>
 
 </div>
