--- a/app/views/podcasts/show.html.erb
+++ b/app/views/podcasts/show.html.erb
@@ -1,6 +1,8 @@
 <div class="container">
-  <%= render "shared/resource_title", resource: @podcast %>
-  <iframe src="<%=@podcast.url%>" width="100%" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+  <%= render "shared/resource_title", resource: @resource %>
+  <iframe src="<%=@resource.url%>" width="100%" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
   <p>Note: You have to be logged into your Spotify account to listen to the full podcast.</p>
-  <%= render "shared/new_comment_form", resource: @song %>
+
+  <%= render "shared/comments", resource: @resource %>
+  <%= render "shared/new_comment_form", resource: @resource %>
 </div>
