--- a/app/views/shared/_comments.html.erb
+++ b/app/views/shared/_comments.html.erb
@@ -2,7 +2,7 @@
 <% if resource.comments.count > 0 %>
   <% resource.comments.each do |comment| %>
 
-    <div class="d-flex flex-column w-50">
+    <div class="d-flex flex-column w-50 comment-container">
 
       <div class= "d-flex justify-content-between">
 
