--- a/app/views/shared/_new_comment_form.html.erb
+++ b/app/views/shared/_new_comment_form.html.erb
@@ -1,9 +1,11 @@
+<div class="new-comment-container mt-4">
   <%= simple_form_for @comment, url: resource_comments_path(resource), class: "inline" do |f| %>
-    <div class="d-flex justify-content-start">
-      <%= f.input :content, label: false, required: false, class: "comment-text-input", placeholder: "Leave a comment..." %>
+    <div class="d-flex justify-content-center comment-form">
+      <%= f.input :content, label: false, required: false, class: "comment-text-input", placeholder: "¿Qué piensas?" %>
       <%= button_tag :submit, class: "btn btn-primary comment-button" do %>
         <i class="fa-solid fa-paper-plane"></i>
       <% end %>
 
     </div>
   <% end %>
+</div>
