--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -3,7 +3,9 @@
 
   <iframe width="560" height="315" src="https://www.youtube.com/embed/<%= @url_id %>"  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-  <%= render "shared/comments", resource: @resource %>
-  <%= render "shared/new_comment_form", resource: @resource %>
+  <div class="comments-container box-shadow-basic w-50 round-corners">
+    <%= render "shared/comments", resource: @resource %>
+    <%= render "shared/new_comment_form", resource: @resource %>
+  </div>
 
 </div>
