--- a/app/views/shared/_resource_title.html.erb
+++ b/app/views/shared/_resource_title.html.erb
@@ -1,4 +1,4 @@
 <div class="resource-header">
-<h2><strong><%= resource.title.upcase %></strong></h1>
-<h4>by <%= resource.author %></h3>
+  <h2><strong><%= resource.title %></strong></h1>
+  <h4>by <%= resource.author %></h3>
 </div>
