--- a/app/assets/stylesheets/components/_comments.scss
+++ b/app/assets/stylesheets/components/_comments.scss
@@ -15,6 +15,15 @@
   p {
     margin: 0;
   }
+  .del {
+    text-align: right;
+    color: $pink;
+    transition: 0.3s;
+  }
+  .del:hover {
+    color: $pink;
+    color: #f382d7;
+  }
 }
 
 .comment-details {
@@ -45,8 +54,13 @@
     padding: 0;
     color: $pink;
     position: absolute;
-    right: 92px;
+    right: 72px;
     top: 12px;
+  }
+
+  .comment-button:hover {
+    color: $darkerpink;
+    background-color: $blue;
   }
 
   .comment_content {
