--- a/app/views/podcasts/show.html.erb
+++ b/app/views/podcasts/show.html.erb
@@ -1,10 +1,15 @@
 <div class="container">
   <%= render "shared/resource_title", resource: @resource %>
-  <iframe src="<%=@resource.url%>" width="100%" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-  <p>Note: You have to be logged into your Spotify account to listen to the full podcast.</p>
 
-  <div class="comments-container box-shadow-basic w-50 round-corners">
-    <%= render "shared/comments", resource: @resource %>
-    <%= render "shared/new_comment_form", resource: @resource %>
+  <div class="d-flex justify-content-between w-100">
+    <div class="d-flex flex-column align-items-center">
+      <iframe src="<%=@resource.url%>" width="100%" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+      <p>Note: You have to be logged into your Spotify account to listen to the full podcast.</p>
+    </div>
+
+    <div class="comments-container box-shadow-basic w-50 round-corners">
+      <%= render "shared/comments", resource: @resource %>
+      <%= render "shared/new_comment_form", resource: @resource %>
+    </div>
   </div>
 </div>
