style podcast show page

--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -3,7 +3,7 @@
 
   <div class="d-flex justify-content-between w-100">
     <div class="d-flex flex-column align-items-center">
-      <iframe src="<%=@resource.url%>" width="500" height="450" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+      <iframe src="<%=@resource.url%>" width="80%" height="450" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
       <p class= "my-3">Note: You have to be logged into your Spotify account to listen to the full song.</p>
     </div>
 
