devise set up and sign_in and sign_up pages styled

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,6 @@
 <div>
 
-  <div class="articles-container">
+  <div class="container-lg-bordered">
 
     <div class="row">
       <%= image_tag "articles_cropped.png", alt: "image of newspaper", id: "articles" %>
