--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -2,8 +2,9 @@
   <%= render 'shared/resource_title', resource: @resource %>
 
   <div class="d-flex justify-content-between w-100">
-
-      <iframe class="spotify-song" width="680" height="380" src="https://www.youtube.com/embed/<%= @url_id %>"  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div>
+      <iframe width="680" height="380" src="https://www.youtube.com/embed/<%= @url_id %>"  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
 
     <div class="comments-container box-shadow-basic round-corners ml-4">
       <%= render "shared/comments", resource: @resource %>
