--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -3,7 +3,7 @@
 
   <div class="d-flex justify-content-between w-100">
     <div>
-      <iframe width="680" height="380" src="https://www.youtube.com/embed/<%= @url_id %>"  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="680" height="380" src="https://www.youtube.com/embed/<%= @resource.url_id %>"  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <%= render "shared/interactions" %>
     </div>
 
