--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,5 @@
 @import "components/index";
 @import "pages/index";
 @import "components/resource_title";
-@import "components/card"
+@import "components/card";
 @import "utilities/index";
-
