--- a/app/views/shared/_interactions.html.erb
+++ b/app/views/shared/_interactions.html.erb
@@ -1,5 +1,5 @@
 <% if @resource.liked?(current_user) %>
-  <%= link_to resource_likes_path(@resource), method: :post, class: "like-btn" do %>
+  <%= link_to like_path(@like), method: :delete, class: "like-btn" do %>
     <i class="fa-solid fa-heart"></i>
   <% end %>
 <% else %>
