--- a/app/assets/stylesheets/utilities/_custom_container.scss
+++ b/app/assets/stylesheets/utilities/_custom_container.scss
@@ -17,3 +17,14 @@
   margin-top: 32px;
   background-color: white;
 }
+
+.container-lg-bordered-no-mt {
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 1240px;
+  border-left: 1px solid $pink;
+  border-right: 1px solid $pink;
+  background-color: white;
+  padding-top: 32px;
+}
