--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,25 +1,24 @@
-<div>
-
-  <div class="container-lg-bordered">
-
-    <div class="row">
-      <%= image_tag "articles_cropped.png", alt: "image of newspaper", id: "articles" %>
-    </div>
-
-    <div class="row mt-3">
-        <div class="col-12 col-lg-8">
-          <%= render "shared/resource_title", resource: @article %>
-          <div style="margin-left:30px; margin-top:28px;">
-            <%= link_to "Read article", @article.url %>
-          </div>
-          <br>
-          <br>
-        </div>
-
-        <div class="col-12 col-lg-4">
-          <h4>Comments section</h4>
-        </div>
-    </div>
-
+<div class="container-lg-bordered">
+  <div class="row">
+    <%= image_tag "articles_cropped.png", alt: "image of newspaper", id: "articles" %>
   </div>
+
+  <div class="row mt-4">
+    <div class="d-flex justify-content-around w-100">
+      <div style="width:680px;">
+        <h2><strong><%= @resource.title %></strong></h1>
+        <h4>by <%= @resource.author %></h3>
+        <br>
+        <%= link_to "Read article", @resource.url %>
+      </div>
+
+      <div class="comments-container box-shadow-basic round-corners ml-4">
+        <%= render "shared/comments", resource: @resource %>
+        <%= render "shared/new_comment_form", resource: @resource %>
+      </div>
+    </div>
+  </div>
+  <br>
+  <br>
+  <br>
 </div>
