--- a/app/views/podcasts/show.html.erb
+++ b/app/views/podcasts/show.html.erb
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container-lg-bordered-no-mt">
   <%= render "shared/resource_title", resource: @resource %>
-
-  <div class="d-flex justify-content-between w-100">
+  <br>
+  <div class="d-flex justify-content-around w-100">
     <div class="d-flex flex-column align-items-center">
       <iframe src="<%=@resource.url%>" width="80%" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
       <p class="my-3">Note: You have to be logged into your Spotify account to listen to the full podcast.</p>
@@ -12,4 +12,14 @@
       <%= render "shared/new_comment_form", resource: @resource %>
     </div>
   </div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 </div>
