--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -8,7 +8,7 @@
       <div class="resource-header">
         <div class="resource-title-author">
           <div class="resource-title">
-            <h5><strong><%= resource.title.upcase %></strong></h5>
+            <h5><strong><%= resource.title %></strong></h5>
           </div>
           <p><%= resource.author %></p>
         </div>
