--- a/app/views/podcasts/show.html.erb
+++ b/app/views/podcasts/show.html.erb
@@ -5,6 +5,7 @@
     <div class="d-flex flex-column align-items-center">
       <iframe src="<%=@resource.url%>" width="80%" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
       <p class="my-3">Note: You have to be logged into your Spotify account to listen to the full podcast.</p>
+      <%= render "shared/interactions" %>
     </div>
 
     <div class="comments-container box-shadow-basic round-corners ml-4">
