--- a/app/views/shared/_interactions.html.erb
+++ b/app/views/shared/_interactions.html.erb
@@ -1,31 +1,7 @@
+<div class="d-flex flex-column align-items-end">
 <div>
-  <% if @resource.liked?(current_user) %>
-
-    <%= link_to like_path(@like), method: :delete, class: "like-btn" do %>
-      <i class="fa-solid fa-heart"></i>
-    <% end %>
-
-  <% else %>
-
-    <%= link_to resource_likes_path(@resource), method: :post, class: "like-btn" do %>
-      <i class="fa-regular fa-heart"></i>
-    <% end %>
-
-  <% end %>
-
-  <% if @resource.bookmarked?(current_user) %>
-
-    <%= link_to bookmark_path(@bookmark), method: :delete, class: "bookmark-btn" do %>
-      <i class="fa-solid fa-bookmark"></i>
-      Bookmarked
-    <% end %>
-
-  <% else %>
-
-    <%= link_to resource_bookmarks_path(@resource), method: :post, class: "bookmark-btn" do %>
-      <i class="fa-regular fa-bookmark"></i>
-      Not bookmarked
-    <% end %>
-
-  <% end %>
+    <%= render "shared/like_button" %>
+    <%= render "shared/bookmark_button" %>
+</div>
+  <%= render "shared/view_button" %>
 </div>
