--- a/app/views/podcasts/show.html.erb
+++ b/app/views/podcasts/show.html.erb
@@ -2,11 +2,13 @@
   <%= render "shared/resource_title", resource: @resource %>
   <br>
   <div class="d-flex justify-content-around w-100">
-    <div class="d-flex flex-column align-items-center">
-      <iframe src="<%=@resource.url%>" width="80%" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+
+    <div class="d-flex flex-column align-items-end">
       <p class="my-3">Note: You have to be logged into your Spotify account to listen to the full podcast.</p>
+      <iframe src="<%=@resource.url%>" width="100%" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
       <%= render "shared/interactions" %>
     </div>
+
 
     <div class="comments-container box-shadow-basic round-corners ml-4">
       <%= render "shared/comments", resource: @resource %>
