embedded imgs index

--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -2,125 +2,11 @@
 
   <h2>TOP RATED</h2>
   <div class="card-container">
-    <% @resources.each do |resource| %>
-
-    <div class="resource-card">
-      <div class="resource-header">
-        <div class="resource-title-author">
-          <div class="resource-title">
-            <h5><strong><%= resource.title %></strong></h5>
-          </div>
-          <p><%= resource.author %></p>
-        </div>
-        <div class="resource-format">
-           <% if resource.type == "Video" %>
-                <p><i class="fa-solid fa-video"></i></p>
-              <% elsif resource.type == "Article" %>
-                <p><i class="fa-brands fa-readme"></i></p>
-              <% elsif resource.type == "Song"%>
-                <p><i class="fa-solid fa-music"></i></p>
-              <% elsif resource.type == "Podcast" %>
-                <p><i class="fa-solid fa-podcast"></i></p>
-              <% else %>
-                <p><i class="fa-solid fa-circle-question">
-              <% end %></i></p>
-        </div>
-      </div>
-        <div class="card-image">
-          <img src="/assets/Lengua Viva solid.png">
-          <div class="card-tags">
-              <p>Cooking</p>
-          </div>
-          <div class="card-details">
-            <div class="resource-likes">
-              <p><i class="fa-solid fa-eye"></i></i> 12  <i class="fa-solid fa-thumbs-up"></i> 12  <i class="fas fa-bookmark"></i><i class="fa-regular fa-bookmark"></i></p>
-            </div>
-          </div>
-        </div>
-    </div>
-    <% end %>
+    <%= render @resources %>
   </div>
 
   <h2>JUST FOR YOU</h2>
   <div class="card-container">
-    <% @resources.each do |resource| %>
-
-    <div class="resource-card">
-      <div class="resource-header">
-        <div class="resource-title-author">
-          <div class="resource-title">
-            <h5><strong><%= resource.title.upcase %></strong></h5>
-          </div>
-          <p><%= resource.author %></p>
-        </div>
-        <div class="resource-format">
-           <% if resource.type == "Video" %>
-                <p><i class="fa-solid fa-video"></i></p>
-              <% elsif resource.type == "Article" %>
-                <p><i class="fa-brands fa-readme"></i></p>
-              <% elsif resource.type == "Song"%>
-                <p><i class="fa-solid fa-music"></i></p>
-              <% elsif resource.type == "Podcast" %>
-                <p><i class="fa-solid fa-podcast"></i></p>
-              <% else %>
-                <p><i class="fa-solid fa-circle-question">
-              <% end %></i></p>
-        </div>
-      </div>
-        <div class="card-image">
-          <img src="/assets/Lengua Viva solid.png">
-          <div class="card-tags">
-              <p>Cooking</p>
-          </div>
-          <div class="card-details">
-            <div class="resource-likes">
-              <p><i class="fa-solid fa-eye"></i></i> 12  <i class="fa-solid fa-thumbs-up"></i> 12  <i class="fas fa-bookmark"></i><i class="fa-regular fa-bookmark"></i></p>
-            </div>
-          </div>
-        </div>
-    </div>
-    <% end %>
+    <%= render @resources %>
   </div>
-
-  <h2>NEW THIS WEEK</h2>
-  <div class="card-container">
-    <% @resources.each do |resource| %>
-
-    <div class="resource-card">
-      <div class="resource-header">
-        <div class="resource-title-author">
-          <div class="resource-title">
-            <h5><strong><%= resource.title.upcase %></strong></h5>
-          </div>
-          <p><%= resource.author %></p>
-        </div>
-        <div class="resource-format">
-           <% if resource.type == "Video" %>
-                <p><i class="fa-solid fa-video"></i></p>
-              <% elsif resource.type == "Article" %>
-                <p><i class="fa-brands fa-readme"></i></p>
-              <% elsif resource.type == "Song"%>
-                <p><i class="fa-solid fa-music"></i></p>
-              <% elsif resource.type == "Podcast" %>
-                <p><i class="fa-solid fa-podcast"></i></p>
-              <% else %>
-                <p><i class="fa-solid fa-circle-question">
-              <% end %></i></p>
-        </div>
-      </div>
-        <div class="card-image">
-          <img src="/assets/Lengua Viva solid.png">
-          <div class="card-tags">
-              <p>Cooking</p>
-          </div>
-          <div class="card-details">
-            <div class="resource-likes">
-              <p><i class="fa-solid fa-eye"></i></i> 12  <i class="fa-solid fa-thumbs-up"></i> 12  <i class="fas fa-bookmark"></i><i class="fa-regular fa-bookmark"></i></p>
-            </div>
-          </div>
-        </div>
-    </div>
-    <% end %>
-  </div>
-
 </div>
