--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -12,10 +12,10 @@
   display: grid;
   grid-column-gap: 32px;
   row-gap: 48px;
-  // grid-template-columns: 1fr 1fr 1fr;
   margin: 32px 0px;
   grid-auto-flow: column;
   overflow-x: scroll;
+  overflow-y: hidden;
   scrollbar-color: $pink;
 }
 
@@ -25,7 +25,6 @@
   background-color: white;
   border-radius: 3px;
   box-shadow: 2px 2px 5px $pink;
-  transition: 0.2s;
   overflow: hidden;
 }
 
