reviews modal and footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   </head>
     <%= render 'shared/flashes' %>
     <% unless @homepage %>
@@ -20,5 +21,9 @@
     <body class="<%= @resource_show_page ? "page-background" : "" %>">
 
     <%= yield %>
+
+    <% unless @homepage %>
+      <%= render "shared/footer" %>
+    <% end %>
   </body>
 </html>
