--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -8,7 +8,6 @@
         <li>Approach</li>
         <li>Team</li>
         <li>Careers</li>
-        <li>Contact us</li>
       </ul>
     </div>
 
@@ -26,15 +25,26 @@
         <li>LenguaViva FAQs</li>
         <li>Troubleshooting</li>
         <li>Discussion</li>
+        <li>Contact us</li>
       </ul>
     </div>
 
     <div class="footer-content">
-      <h6>Socials</h6>
+      <h6>Privacy and terms</h6>
+      <ul>
+        <li>Community guidelines</li>
+        <li>Terms</li>
+        <li>Privacy</li>
+      </ul>
+    </div>
+
+    <div class="footer-content">
+      <h6>Social</h6>
       <ul>
         <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
         <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
         <li> <a href="#"><i class="fa-brands fa-facebook-square"></i></a></li>
+         <%# <li> <a href="#"><i class="fa-brands fa-youtube"></i></a></li> %>
       </ul>
     </div>
 
