--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-lenguaviva {
   justify-content: space-between;
-  background: $blue;
+  background: $primarycolor;
   height: 60px;
 
   .navbar-logo {
