--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -7,8 +7,15 @@ $orange: #E67E22;
 $green: #75dbadb9;
 $gray: #0e00009d;
 $light-gray: #F4F4F4;
-$pink: #F3BAE5;
-$darkerpink: #f382d7;
-$blue: #2F8CD7;
+$secondarycolor: #ff8e00;
+$darkersecondarycolor: #ff6600;
+$primarycolor: #2c599d;
+$blue-grey: rgb(189, 200, 228);
 $dark-grey: rgb(20, 20, 20);
 $off-white: rgb(248, 248, 248);
+
+
+// slightly pale blue #4b98d6;
+// darker blue #003366;
+// #2c599d medium blue
+// turquoise #219ebc
