--- a/app/assets/stylesheets/utilities/_custom_container.scss
+++ b/app/assets/stylesheets/utilities/_custom_container.scss
@@ -12,8 +12,8 @@
   margin-right: auto;
   margin-left: auto;
   max-width: 1240px;
-  border-left: 1px solid $pink;
-  border-right: 1px solid $pink;
+  border-left: 1px solid $secondarycolor;
+  border-right: 1px solid $secondarycolor;
   margin-top: 32px;
   background-color: white;
 }
@@ -23,8 +23,8 @@
   margin-right: auto;
   margin-left: auto;
   max-width: 1240px;
-  border-left: 1px solid $pink;
-  border-right: 1px solid $pink;
+  border-left: 1px solid $secondarycolor;
+  border-right: 1px solid $secondarycolor;
   background-color: white;
   padding-top: 32px;
 }
