--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,6 +1,6 @@
 .avatar {
   width: 50px;
-  border: 2px solid $pink;
+  border: 1px solid $blue-grey;
   border-radius: 50%;
 }
 
@@ -9,14 +9,14 @@
   width: 56px;
   height: 56px;
   border-radius: 50%;
-  border: 2px solid $pink;
+  border: 2px solid $secondarycolor;
 }
 
 .avatar-small {
   width: 38px;
   height: 38px;
   border-radius: 50%;
-  border: 2px solid $pink;
+  border: 2px solid $secondarycolor;
 }
 
 .avatar-bordered {
