--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -11,9 +11,9 @@ $font-size-base: 1rem;
 
 // Colors
 $body-color: $gray;
-$primary:    $blue;
+$primary:    $primarycolor;
 $success:    $green;
-$info:       $pink;
+$info:       $secondarycolor;
 $danger:     $red;
 $warning:    $orange;
 
