--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -17,6 +17,7 @@
   overflow-x: scroll;
   overflow-y: hidden;
   scrollbar-color: $pink;
+  background-color: FAFAFA !important;
 }
 
 .resource-card {
