--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,37 +4,37 @@
     <div class="footer-content">
       <h6>About us</h6>
       <ul>
-        <li>Mission</li>
-        <li>Approach</li>
-        <li>Team</li>
-        <li>Careers</li>
+        <li><a href="#">Mission</a></li>
+        <li><a href="#">Approach</a></li>
+        <li><a href="#">Team</a></li>
+        <li><a href="#">Careers</a></li>
       </ul>
     </div>
 
     <div class="footer-content">
       <h6>Apps</h6>
       <ul>
-        <li>LenguaViva for Android</li>
-        <li>LenguaViva for iOS</li>
+        <li><a href="#">LenguaViva for Android</a></li>
+        <li><a href="#">LenguaViva for iOS</a></li>
       </ul>
     </div>
 
     <div class="footer-content">
       <h6>Help and support</h6>
       <ul>
-        <li>LenguaViva FAQs</li>
-        <li>Troubleshooting</li>
-        <li>Discussion</li>
-        <li>Contact us</li>
+        <li><a href="#">LenguaViva FAQs</a></li>
+        <li><a href="#">Troubleshooting</a></li>
+        <li><a href="#">Discussion</a></li>
+        <li><a href="#">Contact us</a></li>
       </ul>
     </div>
 
     <div class="footer-content">
       <h6>Privacy and terms</h6>
       <ul>
-        <li>Community guidelines</li>
-        <li>Terms</li>
-        <li>Privacy</li>
+        <li><a href="#">Community guidelines</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><a href="#">Privacy</a></li>
       </ul>
     </div>
 
@@ -44,8 +44,6 @@
         <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
         <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
         <li> <a href="#"><i class="fa-brands fa-facebook-square"></i></a></li>
-         <%# <li> <a href="#"><i class="fa-brands fa-youtube"></i></a></li> %>
       </ul>
     </div>
-
 </div>
