--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,6 +1,5 @@
 // Import Google fonts
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@500;800&family=Poppins:wght@100;200&family=Raleway:wght@100;300;500&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;500;800&family=Poppins:wght@100;200&family=Raleway:wght@100;300;500&display=swap');
 @import "colors";
 
 // Define fonts for body and headers
