--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,25 @@
-<h1>H1 Style</h1>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col landing-bg">
+      <div class="container landing-text">
+        <div class="typewriter">
+          <h1>Level Up Your Language</h1>
+        </div>
+          <h3>Practise foreign languages with authentic materials.</h2>
+          <p>Lengua Viva gives you personalised recommendations for songs, podcasts, articles and videos in your language of choice</p>
+        <h2><%= link_to "Login", new_user_session_path %></h2>
+      </div>
+    </div>
 
-<h2>H2 Style</h2>
+    <div class="col landing-bg">
+      <div class="container">
+      <%= render "image_carousel" %>
+      </div>
 
-<h3>H3 Style</h3>
+    </div>
 
-<h4>H4 Style</h4>
+  </div>
 
-<h5>H5 Style</h5>
-<br>
-<h2><%= link_to "Login", new_user_session_path %></h2>
-<br>
-<p>Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit amet consectetur adipisci[ng] velit, sed quia non numquam [do] eius modi tempora inci[di]dunt, ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum[d] exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? [D]Quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?</p>
+</div>
+
+<%= javascript_pack_tag 'homepage' %>
