--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -13,7 +13,7 @@
 
   .landing-text {
     text-align: center;
-    margin-top: 300px;
+    padding-top: 300px;
     height: 150px;
   }
 
@@ -29,7 +29,7 @@
 
 .typewriter h1 {
   margin-bottom: 18px;
-  width: 91%;
+  width: 88%;
   height: 58px;
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   border-right: 3px solid $secondarycolor; /* The typwriter cursor */
@@ -43,7 +43,7 @@
 /* The typing effect */
 @keyframes typing {
   from { width: 0 }
-  to { width: 91% }
+  to { width: 88% }
 }
 
 /* The typewriter cursor effect */
