--- a/app/views/pages/_image_carousel.html.erb
+++ b/app/views/pages/_image_carousel.html.erb
@@ -1,13 +1,13 @@
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <%= image_tag "default_avatar", alt: "Klimt painting", class: "d-block carousel-img" %> <br>
+<div id="carouselExampleSlidesOnly" class="carousel carousel-fade slide m-0" data-bs-ride="carousel">
+  <div class="carousel-inner m-0">
+    <div class="carousel-item active m-0">
+      <%= image_tag "rosalia", alt: "Rosalia", class: "d-block carousel-img" %> <br>
     </div>
-    <div class="carousel-item">
-      <%= image_tag "default_avatar", alt: "Klimt painting", class: "d-block carousel-img" %> <br>
+    <div class="carousel-item m-0">
+      <%= image_tag "machupicchu", alt: "Machu Picchu", class: "d-block carousel-img" %> <br>
     </div>
-    <div class="carousel-item">
-      <%= image_tag "default_avatar", alt: "Klimt painting", class: "d-block carousel-img" %> <br>
+    <div class="carousel-item m-0">
+      <%= image_tag "fridakahlo", alt: "Frida Kahlo", class: "d-block carousel-img" %> <br>
     </div>
   </div>
 </div>
