changed image names

--- a/app/views/pages/_image_carousel.html.erb
+++ b/app/views/pages/_image_carousel.html.erb
@@ -1,13 +1,13 @@
 <div id="carouselExampleSlidesOnly" class="carousel carousel-fade slide m-0" data-bs-ride="carousel">
   <div class="carousel-inner m-0">
     <div class="carousel-item active m-0">
-      <%= image_tag "rosalia", alt: "Rosalia", class: "d-block carousel-img" %> <br>
+      <%= image_tag "rosalia.png", alt: "Rosalia", class: "d-block carousel-img" %> <br>
     </div>
     <div class="carousel-item m-0">
-      <%= image_tag "machupicchu", alt: "Machu Picchu", class: "d-block carousel-img" %> <br>
+      <%= image_tag "machupicchu.png", alt: "Machu Picchu", class: "d-block carousel-img" %> <br>
     </div>
     <div class="carousel-item m-0">
-      <%= image_tag "fridakahlo", alt: "Frida Kahlo", class: "d-block carousel-img" %> <br>
+      <%= image_tag "fridakahlo.png", alt: "Frida Kahlo", class: "d-block carousel-img" %> <br>
     </div>
   </div>
 </div>
