--- a/app/views/shared/_comments.html.erb
+++ b/app/views/shared/_comments.html.erb
@@ -7,7 +7,7 @@
       <div class= "d-flex justify-content-between align-items-center comment-details">
 
         <div class="d-flex align-items-center">
-          <%= image_tag "default_avatar", class: "avatar-small" %>
+          <%= image_tag "default_avatar.png", class: "avatar-small" %>
           <p><%= comment.user.first_name %> <%= comment.user.last_name %></p>
         </div>
 
