navbar style fixed

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,6 +1,6 @@
 .avatar {
-  width: 50px;
-  border: 1px solid $blue-grey;
+  width: 46px;
+  // border: 1px solid $blue-grey;
   border-radius: 50%;
 }
 
