--- a/app/assets/stylesheets/utilities/_box_shadows.scss
+++ b/app/assets/stylesheets/utilities/_box_shadows.scss
@@ -1,3 +1,7 @@
 .box-shadow-basic {
   box-shadow: 1px 1px 8px rgba(20, 20, 20, 0.2);
 }
+
+.text-shadow-basic {
+  text-shadow: 2px 2px 8px rgba(20,20,20, 0.2);
+}
