--- a/app/views/pages/_image_carousel.html.erb
+++ b/app/views/pages/_image_carousel.html.erb
@@ -9,5 +9,8 @@
     <div class="carousel-item m-0">
       <%= image_tag "fridakahlo.png", alt: "Frida Kahlo", class: "d-block carousel-img" %> <br>
     </div>
+    <div class="carousel-item m-0">
+      <%= image_tag "street_cafe.png", alt: "Cafe in the street", class: "d-block carousel-img" %> <br>
+    </div>
   </div>
 </div>
