--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container-lg-bordered">
+<div class="container-lg-bordered box-shadow-basic">
   <div class="row">
     <%= image_tag "articles_cropped.png", alt: "image of newspaper", id: "articles" %>
   </div>
@@ -13,7 +13,7 @@
         <%= render "shared/interactions" %>
       </div>
 
-      <div class="comments-container box-shadow-basic round-corners ml-4">
+      <div class="comments-container ml-4">
         <%= render "shared/comments", resource: @resource %>
         <%= render "shared/new_comment_form", resource: @resource %>
       </div>
