--- a/app/views/podcasts/show.html.erb
+++ b/app/views/podcasts/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container-lg-bordered-no-mt">
+<div class="container-lg-bordered box-shadow-basic">
   <%= render "shared/resource_title", resource: @resource %>
   <br>
   <div class="d-flex justify-content-around w-100">
@@ -10,7 +10,7 @@
     </div>
 
 
-    <div class="comments-container box-shadow-basic round-corners ml-4">
+    <div class="comments-container ml-4">
       <%= render "shared/comments", resource: @resource %>
       <%= render "shared/new_comment_form", resource: @resource %>
     </div>
