--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-sm navbar-lenguaviva box-shadow-basic">
+<div class="navbar navbar-expand-sm navbar-lenguaviva" id="navBar">
   <div class="container-fluid">
     <%= link_to image_tag("LenguaVivaTransparentcropped.png", height: 42), root_path, alt: "Lengua Viva logo" %>
 
