--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -3,7 +3,7 @@
     <h1><strong>Level up your language</strong></h1>
     <p>Welcome to <strong>your</strong> personalised feed</p>
 
-    <div class="input-group rounded">
+    <div class="input-group rounded w-50">
       <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
       <span class="input-group-text border-0" id="search-addon">
         <i class="fas fa-search"></i>
@@ -25,8 +25,11 @@
   </div>
 
   <h2>Top rated</h2>
-  <div class="card-container">
-    <%= render @resources %>
+  <div class="arrow-container">
+    <div class="arrow"><i class="fa-solid fa-angles-right"></i></div>
+    <div class="card-container">
+      <%= render @resources %>
+    </div>
   </div>
 
   <h2>Just for you</h2>
