--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -16,7 +16,8 @@
 
   <h2>Spotlight</h2>
   <div class="featured-content">
-    <img src="https://img.youtube.com/vi/pYYR7lbN-m8/hqdefault.jpg">
+    <img src="/assets/fridakahlo.png" >
+    <i id="video-spotlight-icon" class="fa-solid fa-video"></i>
     <div class="featured-content-info">
       <h3><strong>Un recorrido por un lado distinto de la vida de Frida Kahlo</strong></h3>
       <h4>by National Geographic Latinoamérica</h4>
