--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -1,7 +1,7 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.1)), url(/assets/hero.png);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.1)), url(/assets/orange.png);">
   <div class="container">
     <h1><strong>Level up your language</strong></h1>
-    <p>Welcome to <strong>your</strong> personalised feed</p>
+    <p><strong>Welcome to your personalised feed</strong></p>
 
     <div class="input-group rounded">
       <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
